package liuwei.adapter;

/**
 * @Title: PoliceLamp
 * @Description: TODO(用一句话描述该文件做什么)
 * @author: caoyue
 * @date: 2020/2/17 15:01
 * @最后修改人: caoyue
 * @最后修改时间: 2020/2/17 15:01
 * @company: shopin.net
 * @version: V1.0
 */

public class PoliceLamp {
    public void alarmLamp() {
        System.out.println("呈现警灯闪烁");
    }
}
