package liuwei.adapter;

/**
 * @Title: PoliceSound
 * @Description: TODO(用一句话描述该文件做什么)
 * @author: caoyue
 * @date: 2020/2/17 15:00
 * @最后修改人: caoyue
 * @最后修改时间: 2020/2/17 15:00
 * @company: shopin.net
 * @version: V1.0
 */

public class PoliceSound {
    public void alarmSound() {
        System.out.println("发出警笛声音");
    }
}
