@startuml

abstract class CarController
class PoliceCarAdapter
class PoliceSound
class PoliceLamp
class Client

abstract class CarController {
    + move() : void
    + phonate() : void
    + twinkle() : void
}

class PoliceCarAdapter {
    - sound : PoliceSound
    - lamp : PoliceLamp
    + PoliceCarAdapter()
    + phonate() : void
    + twinkle() : void 
}

class PoliceSound {
    + alarmSound() : void
}

class PoliceLamp {
    + alarmLamp() : void
}

CarController <... Client
CarController <|-- PoliceCarAdapter
PoliceCarAdapter *--> PoliceSound
PoliceCarAdapter *--> PoliceLamp

@enduml
